# msg2eml

./: .gitignore  LICENSE  README.md  pyproject.toml
msg2eml/: __main__.py  main.py
